# AI-Mental-Health-Therapist

./: README.md  frontend.py  pyproject.toml
backend/: ai_agent.py  config.py  main.py  tools.py
